--- a/nuget.config
+++ b/nuget.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <add key="github" value="https://nuget.pkg.github.com/in-duck-tor/index.json" />
+        <add key="github.in-duck-tor" value="https://nuget.pkg.github.com/in-duck-tor/index.json" />
     </packageSources>
     <!-- <packageSourceCredentials> -->
     <!--     <github> -->
