--- a/src/InDuckTor.Shared.Security.Jwt/InDuckTor.Shared.Security.Jwt.csproj
+++ b/src/InDuckTor.Shared.Security.Jwt/InDuckTor.Shared.Security.Jwt.csproj
@@ -4,7 +4,8 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>2.0.0</Version>
+        <Version>2.0.1</Version>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
 
     <ItemGroup>
