--- a/src/InDuckTor.Shared/InDuckTor.Shared.csproj
+++ b/src/InDuckTor.Shared/InDuckTor.Shared.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <Version>2.1.4</Version>
     <PackageReadmeFile>readme.package.md</PackageReadmeFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
